apps/base/prowlarr/service.yml
---
# service
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  selector:
    app: prowlarr
  ports:
    - port: 80
      targetPort: http
